--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
     "serve": "node index.js"
   },
   "author": "Yoshito Yanagihara",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
