--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node index.js"
+    "serve": "nodemon index.js"
   },
   "author": "Yoshito Yanagihara",
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.1151.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
